--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Automation Test</title>
 </head>
 
@@ -8,7 +9,8 @@
 
 <p>It's an great Automation Testing!</p>
 <p>これはJenkinsテストです。0129</p>
-
+<p>これはJenkinsテストです。0131</p>
+<p>これはJenkinsテストです。0207</p>
 
 </body>
 
